# pandas

./: .dockerignore  .env  .env.example  .gitignore  .pdm-python  Dockerfile  main.py  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
app/auth/: crud.py  models.py  router.py
app/core/: __init__.py  config.py  database.py  security.py
app/crud/: auth.py
app/customers/: crud.py  models.py  router.py  schemas.py
app/data_import/: router.py
app/dependencies/: auth.py
app/models/: __init__.py  auth.py  base.py  bulk_orders.py  orders.py  sample_orders.py
app/routers/: auth.py  customers.py  sample_orders.py
app/sample_orders/: router.py  schemas.py
app/services/: __init__.py  customer_service.py  customer_service_polars.py  customer_service_v2.py  import_service.py  order_sync_service.py
migrations/: env.py
migrations/versions/: 1497635b4441_add_customerfollowup_table_and_.py  6d73bb690ce7_add_level_and_created_by_id_to_role_.py
sample_pandas/: bulk_orders.py  customer_conversion_analysis.csv  customer_sample_analysis.csv  monthly_order_trend.csv  pandas_postgresql.py  sample_orders.csv  sample_orders.py
scripts/: fast_import_excel.py  fix_column_name.py  import_excel.py  init_db.py  init_roles.py  recreate_tables.py  setup_customer_tables.py  setup_order_tables.py  setup_original_orders_table.py  smart_import_excel.py  sync_split_orders.py  test_db_connection.py
tests/: conftest.py
tests/services/: test_customer_service.py
